...
    <string name="Back">Back</string>
    <string name="Description">Description</string>
    <string name="Occupation">Occupation</string>
    <string name="Profile">Profile</string>
    <string name="Matches">Matches</string>
    <string name="Settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="matches_description">This is where matches will go</string>
    <string name="settings_description">This is where settings will go</string>
    <string name="secondary_text">Secondary Text</string>
    <string name="title">Title</string>
    <string name="matchedImage">This is the matched image</string>
    <string name="random_person">random person</string>
    <string name="random_person_2">random person 2</string>
    <string name="liked_message">You liked: %s</string>
    <string name="pick_your_reminder_time">Pick your reminder time</string>
    <string name="select_time">Select Time</string>
    <string name="timeSelected">Selected Time</string>
    <string name="setmaxdistance">Set Max Distance</string>
    <string name="distanceInMiles">Type distance in miles</string>
    <string name="selectGenderPreference">Select your gender preference</string>
    <string name="he_him">He/Him</string>
...
