...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/matchesTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_your_reminder_time" />

    <Button
        android:id="@+id/selectTimeButton"
...
